--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "axios": "^1.11.0",
-    "element-plus": "^2.11.2",
     "i": "^0.3.7",
     "pinia": "^3.0.3",
+    "tdesign-vue-next": "^1.16.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
