--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "axios": "^1.11.0",
     "i": "^0.3.7",
     "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "tdesign-vue-next": "^1.16.1",
+    "uuid": "^13.0.0",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
   },
