--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^1.11.0",
     "i": "^0.3.7",
+    "js-base64": "^3.7.8",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "tdesign-vue-next": "^1.16.1",
